--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <header class="navbar navbar-expand-lg navbar-dark flex-column flex-md-row bg-dark">
         <div class="navbar-nav-scroll">
             <ul class="navbar-nav bd-navbar-nav flex-row">
-                <li class="nav-item">
+                <li class="nav-item mx-3">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-3">
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-3">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
