Commit of changed files to add the ascii roguelike project

--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,58 @@
             </div>
             <div class="col-md-5 mt-4">
                 <div class="card">
+                    <img class="card-img-top" src="bookManagement.png">
+                    <div class="card-body">
+                        <div class="row d-flex">
+                            <div class="col-md-10">
+                                <h4 class="card-title">Inventory Management Project</h4>
+                            </div>
+                            <div class="col-md-1">
+                                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#inventoryProjMore" aria-expanded="false" aria-controls="inventoryProjMore">
+                                    Details...
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="collapse m-3 text-start" id="inventoryProjMore">
+                            <p class="card-text">A project I did for a software design challenge in an application to an internship.</p>
+                            <p class="card-text">It is a simple book inventory management system using Django, Bootstrap and SQLite.</p>
+                            <p class="card-text">Because it was made for a design challenge, it was made to the specifications asked for, meaning some functionality like deleting inventory that wasn't asked for isn't included.</p>
+                            <p class="card-text">The link to the github page for this project is here:</p>
+                            <a href="https://github.com/JTP001/bookManagement" class="card-link">Project repository</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-4">
+            <div class="col-md-5 mt-4">
+                <div class="card">
+                    <img class="card-img-top" src="js-roguelike.png">
+                    <div class="card-body">
+                        <div class="row d-flex">
+                            <div class="col-md-10">
+                                <h4 class="card-title">JavaScript Ascii Roguelike</h4>
+                            </div>
+                            <div class="col-md-1">
+                                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#jsRoguelikeProjMore" aria-expanded="false" aria-controls="jsRoguelikeProjMore">
+                                    Details...
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="collapse m-3 text-start" id="jsRoguelikeProjMore">
+                            <p class="card-text">A project I did to practice JavaScript and try making a simple game.</p>
+                            <p class="card-text">It uses JavaScript and Phaser to render a playable map of ascii characters in your browser.</p>
+                            <p class="card-text">The project was based on of a tutorial through the Build Your Own X repository, with extra functionality and original elements added by me once I learned the basics.</p>
+                            <p class="card-text">The link to the github page for this project is here:</p>
+                            <a href="https://github.com/JTP001/js-ascii-roguelike" class="card-link">JS roguelike</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 mt-4">
+                <div class="card">
                     <img class="card-img-top" src="YoutubeAPI.png">
                     <div class="card-body">
                         <div class="row d-flex">
@@ -85,33 +137,6 @@
                             <p class="card-text">The links to the github pages for these two mini-projects are here:</p>
                             <a href="https://github.com/JTP001/channel_scraper" class="card-link">Channel scraper</a>
                             <a href="https://github.com/JTP001/search_scraper" class="card-link">Search scraper</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row d-flex justify-content-center mb-4">
-            <div class="col-md-5 mt-4">
-                <div class="card">
-                    <img class="card-img-top" src="bookManagement.png">
-                    <div class="card-body">
-                        <div class="row d-flex">
-                            <div class="col-md-10">
-                                <h4 class="card-title">Inventory Management Project</h4>
-                            </div>
-                            <div class="col-md-1">
-                                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#inventoryProjMore" aria-expanded="false" aria-controls="inventoryProjMore">
-                                    Details...
-                                </button>
-                            </div>
-                        </div>
-
-                        <div class="collapse m-3 text-start" id="inventoryProjMore">
-                            <p class="card-text">A project I did for a software design challenge in an application to an internship.</p>
-                            <p class="card-text">It is a simple book inventory management system using Django, Bootstrap and SQLite.</p>
-                            <p class="card-text">Because it was made for a design challenge, it was made to the specifications asked for, meaning some functionality like deleting inventory that wasn't asked for isn't included.</p>
-                            <p class="card-text">The link to the github page for this project is here:</p>
-                            <a href="https://github.com/JTP001/bookManagement" class="card-link">Project repository</a>
                         </div>
                     </div>
                 </div>
