Added personalCRM and MCHacks to projects

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,36 @@
         <div class="row d-flex justify-content-center mb-4">
             <div class="col-md-5 mt-4">
                 <div class="card">
-                    <img class="card-img-top" src="OneOnOnes.png">
+                    <img class="card-img-top" src="media/personalCRM.png">
+                    <div class="card-body">
+                        <div class="row d-flex">
+                            <div class="col-md-10">
+                                <h4 class="card-title">Personal CRM Project</h4>
+                            </div>
+                            <div class="col-md-1">
+                                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#personalCRMProjMore" aria-expanded="false" aria-controls="personalCRMProjMore">
+                                    Details...
+                                </button>
+                            </div>
+                        </div>
+                        
+                        <div class="collapse m-3 text-start" id="personalCRMProjMore">
+                            <p class="card-text">A group project in one of my computer science courses where we made a Personal Customer Relationship Management system.</p>
+                            <p class="card-text">This project was made with a real industry partner who asked for it to look this way with these functions, who is continuing to use it.</p>
+                            <p class="card-text">The web app was made with a REACT frontend and a Django backend with a PostgreSQL database, which were deployed using Netlify and Render.</p>
+                            <p class="card-text">It allows you to do a variety of things such as pull contacts, calendar events and data from other social sites and manage everything about your network in one place.</p>
+                            <p class="card-text">However, the project did have limitations since everything had to be free, so the connection to other social apps is limited and the functionality is there but not fully connected withouta plan with those sites to use their APIs.</p>
+                            <p class="card-text">Linked below is a deployed version of the site (note the free database may have expired), the respository, and the demo our team created going over the whole app.</p>
+                            <a href="https://personalcrm-d5.netlify.app/" class="card-link">Deployed web app</a>
+                            <a href="https://github.com/csc301-2025-s/project-23-marc" class="card-link">Project repository</a>
+                            <a href="https://drive.google.com/file/d/1yFwM5GGEoiyr4jf9c3LRai80oEQ2d-BD/view" class="card-link">Demo video</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 mt-4">
+                <div class="card">
+                    <img class="card-img-top" src="media/OneOnOnes.png">
                     <div class="card-body">
                         <div class="row d-flex">
                             <div class="col-md-10">
@@ -57,15 +86,17 @@
                             <p class="card-text">The website allowed you to create schedules, add contacts and invite them to those schedules, make suggested schedules based on a greedy algorithm, and more.</p>
                             <p class="card-text">Although we chose not to deploy the website upon its completion, it ran as intended locally. Below is a quick video showing the parts of the website described:</p>
                             <div class="my-4 embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="OneOnOnes Showcase.mp4" allowfullscreen></iframe>
+                                <iframe class="embed-responsive-item" src="media/OneOnOnes Showcase.mp4" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-4">
             <div class="col-md-5 mt-4">
                 <div class="card">
-                    <img class="card-img-top" src="bookManagement.png">
+                    <img class="card-img-top" src="media/bookManagement.png">
                     <div class="card-body">
                         <div class="row d-flex">
                             <div class="col-md-10">
@@ -88,11 +119,37 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-5 mt-4">
+                <div class="card">
+                    <img class="card-img-top" src="media/mcHacks.png">
+                    <div class="card-body">
+                        <div class="row d-flex">
+                            <div class="col-md-10">
+                                <h4 class="card-title">MCHacks 2025 Project</h4>
+                            </div>
+                            <div class="col-md-1">
+                                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#mchacksProjMore" aria-expanded="false" aria-controls="mchacksProjMore">
+                                    Details...
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="collapse m-3 text-start" id="mchacksProjMore">
+                            <p class="card-text">This project was made during my first ever hackathon, MCHacks12 in January of 2025. Our team was all beginners so the project was very simple.</p>
+                            <p class="card-text">We made a simple ticket system for a medical waiting room with a button for emergencies and games for kids when they are waiting, aimed at a medical related award in the hackathon.</p>
+                            <p class="card-text">As beginners it was difficult for us, especially since my team members didn't know React which I used since I wanted practice with it, but we got something working to show.</p>
+                            <p class="card-text">Below is the link to the site deployed with Github Pages as well as the repository.</p>
+                            <a href="https://jtp001.github.io/mchacks12/" class="card-link">Deployed site</a>
+                            <a href="https://github.com/JTP001/mchacks12" class="card-link">Project repository</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row d-flex justify-content-center mb-4">
             <div class="col-md-5 mt-4">
                 <div class="card">
-                    <img class="card-img-top" src="js-roguelike.png">
+                    <img class="card-img-top" src="media/js-roguelike.png">
                     <div class="card-body">
                         <div class="row d-flex">
                             <div class="col-md-10">
@@ -117,7 +174,7 @@
             </div>
             <div class="col-md-5 mt-4">
                 <div class="card">
-                    <img class="card-img-top" src="YoutubeAPI.png">
+                    <img class="card-img-top" src="media/YoutubeAPI.png">
                     <div class="card-body">
                         <div class="row d-flex">
                             <div class="col-md-10">
