Fixed index photo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="container">
             <div class="col-sm-2 span4 mx-auto mt-3">
-                <img class="rounded-circle shadow-4-strong img-fluid center-block" alt="portrait" src="portrait.jpg" />
+                <img class="rounded-circle shadow-4-strong img-fluid center-block" alt="portrait" src="media/portrait.jpg" />
             </div>
         </div>
         
